# django-actlog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
actlog/: __init__.py  admin.py  apps.py  choices.py  conf.py  dispatch.py  forms.py  middleware.py  models.py  receivers.py  signals.py  tasks.py
actlog/migrations/: 0001_initial.py  0002_remove_request_context_fields.py  0003_actlog_level.py
actlog/services/: __init__.py  logging.py
actlog/static/actlog/: admin.css
tests/: conftest.py  settings.py  test_admin.py  test_async_dispatch.py  test_logging_service.py
