[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-actlog"
version = "0.4.0"
description = "Minimal explicit event logging for Django MVPs."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hossein Dahaei", email = "dahaeehossein@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["Django>=4.2"]
keywords = ["django", "audit", "activity-log", "event-logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
admin = ["django-json-widget>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/HosseinDahaei/django-actlog"
Repository = "https://github.com/HosseinDahaei/django-actlog"
Documentation = "https://github.com/HosseinDahaei/django-actlog#readme"

[tool.setuptools.packages.find]
include = ["actlog*"]

[tool.setuptools.package-data]
actlog = ["static/actlog/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["actlog", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
